# g1_botbrain_greeter

./: .gitignore  FAST_LIO建图转弯点云漂移问题解决报告.md  FAST_LIO转弯后不可恢复漂移第二阶段分析与解决报告.md  botbrain.service  docker-compose.yaml  foxglove-guide.md  hong-kong-offline-mapping-network-runbook.md  install.sh  now_problem.txt  rviz-guide.md  建图导航指令.md  机器人项目run.md
botbrain_ws/: README.md  cyclonedds_config.xml  robot_config.yaml  robot_config.yaml.bak  ros_env.sh
botbrain_ws/src/bot_bringup/: CMakeLists.txt  package.xml
botbrain_ws/src/bot_bringup/config/: foxglove_bridge_params.yaml  twist_mux.yaml
botbrain_ws/src/bot_bringup/launch/: foxglove_bridge.launch.py  twist_mux.launch.py
botbrain_ws/src/bot_custom_interfaces/srv/: ArmCmd.srv
botbrain_ws/src/bot_description/: CMakeLists.txt  package.xml
botbrain_ws/src/bot_description/launch/: botbrain_description.launch.py  robot_description.launch.py
botbrain_ws/src/bot_description/scripts/: urdf_topic_publisher.py
botbrain_ws/src/bot_localization/: STATIC_MAP_GUIDE.md  STATIC_MAP_README.md
botbrain_ws/src/bot_localization/bot_localization/: CMakeLists.txt
botbrain_ws/src/bot_localization/bot_localization/config/: amcl_params.yaml
botbrain_ws/src/bot_localization/bot_localization/launch/: map_odom.launch.py  map_switcher.launch.py  rtabmap_lidar.launch.py  rtabmap_lidar_mapping.launch.py  rtabmap_mapping.launch.py  static_map_localization.launch.py
botbrain_ws/src/bot_localization/bot_localization/scripts/: map_odom.py  map_switcher.py
botbrain_ws/src/bot_navigation/: APRILTAG_CORRECTION_README.md  APRILTAG_SETUP.md  CMakeLists.txt  STANDALONE_TEST_README.md  nav_waypoints.yaml  package.xml
botbrain_ws/src/bot_navigation/behavior_trees/: g1_navigate_to_pose.xml
botbrain_ws/src/bot_navigation/bot_navigation/: waypoint_store.py
botbrain_ws/src/bot_navigation/launch/: apriltag_detection.launch.py  nav2.launch.py  nav_utils.launch.py
botbrain_ws/src/bot_navigation/scripts/: apriltag_correction_client.py  apriltag_correction_standalone.py  apriltag_nav_correction.py  costmap_center_check.py  goal_pose_bridge.py  localization_monitor.py  nav2_utils.py  nav_odom_relay.py  navigation_preflight.py  waypoint_navigator.py  waypoint_recorder.py
botbrain_ws/src/bot_state_machine/config/: navigation.json  payload.json
botbrain_ws/src/bot_state_machine/src/: graph_node.cpp  lifecycle_manager.cpp
botbrain_ws/src/fast_lio/config/: mid360.yaml
botbrain_ws/src/fast_lio/include/ikd-Tree/: ikd_Tree.h
botbrain_ws/src/fast_lio/src/: IMU_Processing.hpp  laserMapping.cpp
botbrain_ws/src/g1_manipulation_pkg/: package.xml  setup.cfg  setup.py
botbrain_ws/src/g1_manipulation_pkg/config/: manipulation_config.yaml
botbrain_ws/src/g1_manipulation_pkg/description_files/urdf/: 29dof.urdf
botbrain_ws/src/g1_manipulation_pkg/g1_manipulation_pkg/manipulation/: arm_controller.py  dx3_hand.py  interactive_marker.py
botbrain_ws/src/g1_manipulation_pkg/g1_manipulation_pkg/scripts/: arm_limp.py  arm_teleop_keyboard.py
botbrain_ws/src/g1_manipulation_pkg/g1_manipulation_pkg/utils/: common.py  helpers.py  ik_solver.py  joints_names.py
botbrain_ws/src/g1_manipulation_pkg/launch/: manipulation_launcher.launch.py
botbrain_ws/src/g1_manipulation_pkg/scripts/: start_manipulation.sh
botbrain_ws/src/g1_pkg/: .gitignore  CMakeLists.txt  package.xml
botbrain_ws/src/g1_pkg/config/: MID360_config.json  arm_poses.txt  camera_config.yaml  nav2_params.yaml  nav2_params_tuning_guide.md  pointcloud_to_laserscan_params.yaml
botbrain_ws/src/g1_pkg/g1_pkg/: grid_mapping_core.py
botbrain_ws/src/g1_pkg/include/: g1_write.hpp  types.hpp
botbrain_ws/src/g1_pkg/include/g1_driver/: g1_driver.hpp
botbrain_ws/src/g1_pkg/launch/: fast_lio.launch.py  livox_MID360.launch.py  localization_3d.launch.py  pc2ls.launch.py  robot_interface.launch.py
botbrain_ws/src/g1_pkg/maps/: accumulated.pgm  accumulated.yaml  aitech.json  aitech.pgm  aitech.yaml  aitech_scans.pcd  floor3.yaml  legacy_scans.pcd  scans.pcd  ug.pgm
botbrain_ws/src/g1_pkg/maps/edit_backup_20260714_150433/: floor3.pgm
botbrain_ws/src/g1_pkg/maps/ug_backup_20260717_161311/: ug.yaml
botbrain_ws/src/g1_pkg/scripts/: g1_controller_commands.py  g1_read.py  grid_accumulator.py  imu_flip.py  initialpose_z_fix.py  pcd_to_grid.py  replay_sequence_men.sh  replay_sequence_you.sh  replay_sequence_zuo.sh  shift_pcd_z.py
botbrain_ws/src/g1_pkg/src/: g1_state_bridge.cpp  g1_write.cpp
botbrain_ws/src/g1_pkg/src/g1_driver/: g1_driver.cpp
botbrain_ws/src/g1_pkg/test/: test_fast_lio_timing_config.py  test_grid_mapping_core.py  test_localization_boundaries.py  test_mapping_runbook.py  test_scene_waypoints.py  test_shift_pcd_z.py
botbrain_ws/src/g1_pkg/urdf/: robot.urdf
botbrain_ws/src/g1_pkg/xacro/: robot.xacro
botbrain_ws/src/g1_right_dex3/elevator_vision/: start_realsense.sh  start_realsense_fixed.sh  start_realsense_lowfps.sh  start_realsense_simple.sh
botbrain_ws/src/g1_right_dex3/unitree_g1_dex3_stack/config/: apriltag_button_close.yaml  apriltag_button_down.yaml  apriltag_button_number1.yaml  (+6 more)
botbrain_ws/src/open3d_loc/: CMakeLists.txt  package.xml
botbrain_ws/src/open3d_loc/config/: loc_param_g1.yaml
botbrain_ws/src/open3d_loc/launch/: open3d_loc_g1.launch.py
botbrain_ws/src/open3d_loc/src/: global_localization.cpp
configs/: cyclonedds_workstation.xml  g1_mapping_rviz2.rviz  g1_nav_loc_rviz2.rviz
docker/: Dockerfile.manipulation  Dockerfile.nav3d
docs/: hong-kong-offline-mapping-network-runbook.md  zenoh-deploy-guide.md
tools/: build_botbrain.sh  estop.sh  recreate_3d_nav_ros2.sh  rename_host.sh  tracer_nav2_pipeline.sh
tools/gotop/: batch.sh  capture.sh  capture_waypoints.py  goto.sh  goto_waypoint.py  navigate_batch.py
tools/host_side/: g1_nav_loc_rviz2.sh  mapping_rviz2.sh
tools/host_side/map_edit/: Dockerfile  README.md  start_map_edit.sh
tools/host_side/map_edit/ros_map_edit/: CMakeLists.txt
tools/mapping/: grid_accumulator.py  mapping_launch.sh  mapping_save.sh  start_mapping_scene.sh
tools/nav/: launch.sh  nav2_launch.sh  select_map_scene.sh  soft_stop.sh
(+28 files in other folders)
